<resources>
    <string name="app_name">Pet App</string>

    //Details about the pet

    <string name="details_about_the_pet">Details about the pet</string>
    <string name="hint_name_pet">Name of the pet: </string>
    <string name="hint_blood_type_pet">Blood type of the pet: </string>
    <string name="choose_the_blood_type">Choose the blood type: </string>


    //Details about the owner

    <string name="details_about_the_owner">Details about the owner</string>
    <string name="hint_name_owner">Name of the owner: </string>
    <string name="hint_address_owner">Address of the owner: </string>



    <string name="back_button_description">Back to the menu</string>

    <string name="no_pets_available">No pets available.</string>
    <string name="bersyte">bersyte</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="image">image</string>
</resources>