<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/ib_Number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            style="@style/NumberTextStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            style="@style/CustomMaterialCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toEndOf="@id/ib_Number"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cardElevation="8dp"
            app:cardCornerRadius="16dp"
            app:cardBackgroundColor="@color/white"
            app:rippleColor="@color/colorPrimaryLight">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    style="@style/InfoAboutText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_about_the_pet" />

                <TextView
                    style="@style/InfoAboutTextSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_name_pet" />

                <TextView
                    style="@style/InfoAboutPet"
                    android:id="@+id/tvPetName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/hint_name_pet" />

                <TextView
                    style="@style/InfoAboutTextSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_blood_type_pet" />

                <TextView
                    style="@style/InfoAboutPet"
                    android:id="@+id/tvPetBloodType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/hint_blood_type_pet" />

                <TextView
                    style="@style/InfoAboutText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_about_the_owner" />

                <TextView
                    style="@style/InfoAboutTextSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_name_owner" />

                <TextView
                    style="@style/InfoAboutOwner"
                    android:id="@+id/tvPetOwnerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/hint_name_owner" />

                <TextView
                    style="@style/InfoAboutTextSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_address_owner" />

                <TextView
                    style="@style/InfoAboutOwner"
                    android:id="@+id/tvPetOwnerAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/hint_address_owner" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
