<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_image"
        tools:context=".fragments.AddPetFragment">

        <LinearLayout
            android:id="@+id/contentLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/InfoAboutText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_about_the_pet" />

            <!-- Name of the pet -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name_pet">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPetName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/InfoAboutText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_the_blood_type" />

            <!-- Blood Type of the pet (RadioGroup) -->

            <RadioGroup
                android:id="@+id/rgBloodType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbBloodTypeA"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="A" />

                <RadioButton
                    android:id="@+id/rbBloodTypeB"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="B" />

                <RadioButton
                    android:id="@+id/rbBloodTypeAB"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="AB" />


            </RadioGroup>

            <TextView
                style="@style/InfoAboutText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_about_the_owner" />

            <!-- Name of the owner -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name_owner">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPetOwnerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Address of the owner -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_address_owner">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPetOwnerAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnGoBackWithoutEditing"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#386C94"
                android:text="Go back without editing"
                app:iconTint="#004277" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
